<resources>
    <string name="app_name">RedmartCatalog</string>
    <string name="action_settings">Settings</string>

    <string name="emoji_snow">\u2744</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="save_to_list">Save to list</string>
    <string name="expiry_minimum_days">Guaranteed fresh for %1$d+ days, inc. delivery day</string>
    <string name="expiry_minimum_months">Expires in $1%d month or more from delivery</string>
    <string name="label_frozen">Frozen</string>
    <string name="description_name">About the product</string>
    <string name="catalog_screen_title">RedMart Catalog</string>
    <string name="notification_added_to_cart">Product added to cart</string>
    <string name="notification_saved_to_list">Product saved to list</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="product_detail_transition_name">detail_image</string>
</resources>
