<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <android.support.design.widget.CoordinatorLayout android:id="@+id/product_detail_coordinator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_huge">

        <LinearLayout android:id="@+id/product_detail_content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout android:id="@+id/top_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:background="@color/white_100">

                <android.support.v4.view.ViewPager android:id="@+id/product_image_pager"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="H,108:77"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.viewpagerindicator.CirclePageIndicator android:id="@+id/image_pager_indicator"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:padding="@dimen/margin_small"
                    app:fillColor="@color/colorPrimary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/product_image_pager"
                    app:pageColor="@color/windowBackground"
                    app:radius="4dp"
                    app:strokeColor="@color/windowBackground"
                    app:strokeWidth="0dp"/>

                <TextView android:id="@+id/product_image_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_round_corner_3dp"
                    android:paddingBottom="@dimen/margin_small"
                    android:paddingLeft="@dimen/margin_small"
                    android:paddingRight="@dimen/margin_small"
                    android:paddingTop="@dimen/margin_small"
                    android:textAllCaps="true"
                    android:textColor="@color/white_100"
                    android:textSize="@dimen/font_size_small"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/image_pager_indicator"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:text="@string/expiry_minimum_days"
                    tools:visibility="visible"/>

                <TextView android:id="@+id/product_title_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:textColor="@color/black_87"
                    android:textSize="@dimen/font_size_huge"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_pager_indicator"
                    tools:text="NESTLE CHEERIOS Oat Crisp Cereal With Whole Grain 400G"/>

                <LinearLayout android:id="@+id/below_title_label_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/product_title_text">

                    <TextView android:id="@+id/product_expiry_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:background="@drawable/rectangle_right_round_24dp"
                        android:paddingBottom="@dimen/margin_small"
                        android:paddingLeft="@dimen/margin_large"
                        android:paddingRight="@dimen/margin_large"
                        android:paddingTop="@dimen/margin_small"
                        android:textColor="@color/white_100"
                        android:textSize="@dimen/font_size_normal"
                        android:visibility="gone"
                        tools:text="@string/expiry_minimum_days"
                        tools:visibility="visible"/>

                    <TextView android:id="@+id/product_frozen_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:background="@drawable/rectangle_right_round_24dp"
                        android:paddingBottom="@dimen/margin_small"
                        android:paddingLeft="@dimen/margin_large"
                        android:paddingRight="@dimen/margin_large"
                        android:paddingTop="@dimen/margin_small"
                        android:text="@string/label_frozen"
                        android:textColor="@color/white_100"
                        android:textSize="@dimen/font_size_normal"
                        android:visibility="gone"
                        tools:visibility="visible"/>

                </LinearLayout>

                <TextView android:id="@+id/product_wt_vol_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textColor="@color/black_38"
                    android:textSize="@dimen/font_size_normal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/below_title_label_layout"
                    tools:text="200 g"/>

                <TextView android:id="@+id/product_price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:textSize="@dimen/font_size_humongous"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/product_wt_vol_text"
                    tools:text="$8.55"/>

                <Button android:id="@+id/product_save_to_list_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/save_to_list"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/product_price_text"/>

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

        <android.support.constraint.ConstraintLayout android:id="@+id/floating_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_huge"
            android:background="@drawable/rectangle_round_corner_36dp"
            android:elevation="6dp"
            android:paddingBottom="@dimen/margin_small"
            android:paddingLeft="@dimen/margin_normal"
            android:paddingRight="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_small"
            android:visibility="gone"
            app:layout_anchor="@id/top_layout"
            app:layout_anchorGravity="bottom|right|end">

            <TextView android:id="@+id/add_to_cart_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_large"
                android:paddingLeft="@dimen/margin_large"
                android:paddingRight="@dimen/margin_large"
                android:text="@string/add_to_cart"
                android:textAllCaps="true"
                android:textColor="@color/white_100"
                android:textSize="@dimen/font_size_normal"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView android:id="@+id/minus_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:clickable="true"
                android:gravity="center"
                android:maxEms="1"
                android:minEms="1"
                android:text="@string/minus"
                android:textColor="@color/white_100"
                android:textSize="@dimen/font_size_gargantuan"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView android:id="@+id/plus_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:clickable="true"
                android:gravity="center"
                android:maxEms="1"
                android:minEms="1"
                android:text="@string/add"
                android:textColor="@color/white_100"
                android:textSize="@dimen/font_size_gargantuan"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView android:id="@+id/cart_quantity_text"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:maxEms="2"
                android:minEms="2"
                android:textColor="@color/white_100"
                android:textSize="@dimen/font_size_humongous"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/minus_button"
                app:layout_constraintRight_toLeftOf="@id/plus_button"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="23" />

        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.CoordinatorLayout>

</android.support.v4.widget.NestedScrollView>

